--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,19 @@
 # files you push to your repository, the more your performance may be affected. #
 #################################################################################
 
-/pierwszy projekt/Output
-/pierwszy projekt/Analyzer
-/pierwszy projekt/FileSync
-/pierwszy projekt/Project/Users
-/pierwszy projekt/.svn
+/WinoDomowe1/Output
+/WinoDomowe1/Analyzer
+/WinoDomowe1/FileSync
+/WinoDomowe1/Project/Users
+/WinoDomowe1/.svn
 **/Thumbs.db
 
 #################################################################################
 # Add items to be ignored below                                                 #
 #################################################################################
 
-
+/pierwszy projekt/Output
+/pierwszy projekt/Analyzer
+/pierwszy projekt/FileSync
+/pierwszy projekt/Project/Users
+/pierwszy projekt/.svn
